Update readme.md, tips for Java 17 and above.